

rw1030
======

SetupR.exe now includes the `recommended' packages.  So does
miniR.exe, and that now needs about seven floppies rather than four.

New menu `Packages' with items to load packages, to install
packages from CRAN or from local zip files, and to update packages.

help.start() now lists all packages in all libraries, but the
search index is still confined to the system library.

Profiling is now available.

Support for earlier compilers has been dropped: you must use a
compiler system that supports --shared and an in-memory dlltool.

Under the default compilation options, Internet Explorer 4.0 or later
is required.

rwinst.exe is no longer part of the distribution: use the newer
installers to install R, and the Packages menu to install pre-compiled
packages.

The old-style Windows help is no longer part of the standard distribution,
but can be made from the sources.



rw1023
======

Alternative installers based on Inno Setup 2.0.x, either SetupR.exe or
miniR* (which fits on four floppies).

The location of R_HOME and the version can optionally be recorded in
the Registry (and will be used by the DCOM interface).  The Inno Setup
installers register the installation, and unregister on
uninstallation.  rwinst.exe has an option to register.  Program
rw1023\bin\RSetReg.exe will register, and rw1023\bin\RSetReg.exe /U
will unregister.

The windows() device no longer rounds width and height to the nearest inch.

You can override the settings Windows reports for pixels per inch
(sometimes it is seriously adrift).  See ?windows.

File `extract-usage' needed for codoc was missing from rw1022sp.zip.

The default memory limit (as reset by --max-mem-size) is set to at
least 16Mb, to allow R to start on machines with 8Mb of RAM.

link.html.help() has been re-written using connections and so is
several times faster.

Rcmd INSTALL now allows Windows-style paths to a tar file.

rproxy.dll is now built for StatConnector version 0.99: earlier versions